--- a/html-css/Atividade/1 atividade/html/start.html
+++ b/html-css/Atividade/1 atividade/html/start.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div>
-        <a href="index.html"><img src="img/start.png" alt=""></a>
+        <a href="index.html"><img src="../img/start.png" alt=""></a>
     </div>
 </body>
 </html>
