Está chegandp novas atualizações

--- a/html-css/Atividade/1 atividade/html/start.html
+++ b/html-css/Atividade/1 atividade/html/start.html
@@ -10,9 +10,36 @@
             height: 200px;
             margin: auto;
         }
+
+        body{
+            background-color: rgb(255, 255, 255);
+        }
     </style>
 </head>
 <body>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptate deleniti quis corporis nihil corrupti debitis iure blanditiis itaque? Libero minima necessitatibus impedit eos tenetur quibusdam voluptas, magnam magni rerum.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptate deleniti quis corporis nihil corrupti debitis iure blanditiis itaque? Libero minima necessitatibus impedit eos tenetur quibusdam voluptas, magnam magni rerum.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptate deleniti quis corporis nihil corrupti debitis iure blanditiis itaque? Libero minima necessitatibus impedit eos tenetur quibusdam voluptas, magnam magni rerum.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptate deleniti quis corporis nihil corrupti debitis iure blanditiis itaque? Libero minima necessitatibus impedit eos tenetur quibusdam voluptas, magnam magni rerum.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptate deleniti quis corporis nihil corrupti debitis iure blanditiis itaque? Libero minima necessitatibus impedit eos tenetur quibusdam voluptas, magnam magni rerum.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptate deleniti quis corporis nihil corrupti debitis iure blanditiis itaque? Libero minima necessitatibus impedit eos tenetur quibusdam voluptas, magnam magni rerum.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptate deleniti quis corporis nihil corrupti debitis iure blanditiis itaque? Libero minima necessitatibus impedit eos tenetur quibusdam voluptas, magnam magni rerum.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptate deleniti quis corporis nihil corrupti debitis iure blanditiis itaque? Libero minima necessitatibus impedit eos tenetur quibusdam voluptas, magnam magni rerum.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptate deleniti quis corporis nihil corrupti debitis iure blanditiis itaque? Libero minima necessitatibus impedit eos tenetur quibusdam voluptas, magnam magni rerum.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptate deleniti quis corporis nihil corrupti debitis iure blanditiis itaque? Libero minima necessitatibus impedit eos tenetur quibusdam voluptas, magnam magni rerum.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptate deleniti quis corporis nihil corrupti debitis iure blanditiis itaque? Libero minima necessitatibus impedit eos tenetur quibusdam voluptas, magnam magni rerum.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptate deleniti quis corporis nihil corrupti debitis iure blanditiis itaque? Libero minima necessitatibus impedit eos tenetur quibusdam voluptas, magnam magni rerum.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptate deleniti quis corporis nihil corrupti debitis iure blanditiis itaque? Libero minima necessitatibus impedit eos tenetur quibusdam voluptas, magnam magni rerum.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptate deleniti quis corporis nihil corrupti debitis iure blanditiis itaque? Libero minima necessitatibus impedit eos tenetur quibusdam voluptas, magnam magni rerum.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptate deleniti quis corporis nihil corrupti debitis iure blanditiis itaque? Libero minima necessitatibus impedit eos tenetur quibusdam voluptas, magnam magni rerum.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptate deleniti quis corporis nihil corrupti debitis iure blanditiis itaque? Libero minima necessitatibus impedit eos tenetur quibusdam voluptas, magnam magni rerum.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptate deleniti quis corporis nihil corrupti debitis iure blanditiis itaque? Libero minima necessitatibus impedit eos tenetur quibusdam voluptas, magnam magni rerum.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptate deleniti quis corporis nihil corrupti debitis iure blanditiis itaque? Libero minima necessitatibus impedit eos tenetur quibusdam voluptas, magnam magni rerum.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptate deleniti quis corporis nihil corrupti debitis iure blanditiis itaque? Libero minima necessitatibus impedit eos tenetur quibusdam voluptas, magnam magni rerum.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptate deleniti quis corporis nihil corrupti debitis iure blanditiis itaque? Libero minima necessitatibus impedit eos tenetur quibusdam voluptas, magnam magni rerum.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptate deleniti quis corporis nihil corrupti debitis iure blanditiis itaque? Libero minima necessitatibus impedit eos tenetur quibusdam voluptas, magnam magni rerum.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptate deleniti quis corporis nihil corrupti debitis iure blanditiis itaque? Libero minima necessitatibus impedit eos tenetur quibusdam voluptas, magnam magni rerum.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptate deleniti quis corporis nihil corrupti debitis iure blanditiis itaque? Libero minima necessitatibus impedit eos tenetur quibusdam voluptas, magnam magni rerum.</p>
     <div>
         <a href="index.html"><img src="../img/start.png" alt=""></a>
     </div>
