--- a/html-css/Atividade/1 atividade/html/start.html
+++ b/html-css/Atividade/1 atividade/html/start.html
@@ -14,6 +14,14 @@
         body{
             background-color: rgb(255, 255, 255);
         }
+
+        a{
+        transition: transform 200ms linear;
+        }
+        a:hover{
+            transform: scale(1.08);
+            opacity: 0.8;
+        }
     </style>
 </head>
 <body>
