--- a/html-css/Atividade/1 atividade/html/index.html
+++ b/html-css/Atividade/1 atividade/html/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/tittle.css">
-
+    <link rel="shortcut icon" href=" " type="image/x-icon">
     <title>vamo la</title>
 </head>
 <body>
