--- a/html-css/Atividade/2 atividade/html/index.html
+++ b/html-css/Atividade/2 atividade/html/index.html
@@ -8,13 +8,17 @@
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/tittle.css">
-    <link rel="shortcut icon" href=" " type="image/x-icon">
+    <link rel="stylesheet" href="../css/animacao.css">
     <title>vamo la</title>
 </head>
 <body>
     <div class="header">
         <header>
+            <img src="../img/html e css.jpeg" alt="">
             <nav>
+                <div class="giro">
+
+                </div>
                 <ul class="menu">
                     <li><a href="">Aaaaaaaaaaaaa</a></li>
                     <li><a href="">Bbbbbbbbbbbbb</a></li>
@@ -24,5 +28,18 @@
             </nav> 
         </header>
     </div>
+    <div class="box">
+        <article>
+            <section>
+                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo, itaque eveniet. Asperiores pariatur quis magnam nemo animi facere exercitationem dolorum, corrupti voluptatibus hic. Reprehenderit velit eius ut iste omnis fugiat.<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, dicta! Ullam nobis in ratione commodi soluta magni aut quisquam. Magnam esse voluptatum animi, amet distinctio illo dolor consequuntur nulla velit.</p<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, dicta! Ullam nobis in ratione commodi soluta magni aut quisquam. Magnam esse voluptatum animi, amet distinctio illo dolor consequuntur nulla velit.</p<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, dicta! Ullam nobis in ratione commodi soluta magni aut quisquam. Magnam esse voluptatum animi, amet distinctio illo dolor consequuntur nulla velit.</p<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, dicta! Ullam nobis in ratione commodi soluta magni aut quisquam. Magnam esse voluptatum animi, amet distinctio illo dolor consequuntur nulla velit.</p<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, dicta! Ullam nobis in ratione commodi soluta magni aut quisquam. Magnam esse voluptatum animi, amet distinctio illo dolor consequuntur nulla velit.</p<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, dicta! Ullam nobis in ratione commodi soluta magni aut quisquam. Magnam esse voluptatum animi, amet distinctio illo dolor consequuntur nulla velit.</p>
+            </section>
+        </article>
+    </div>
+     
+    <!--<div class="box1">
+        <aside>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis dolores sit voluptate hic facilis in ad suscipit eaque possimus, ut corrupti blanditiis, adipisci numquam amet rem ab iusto! Eligendi, enim?</p>
+        </aside>
+    </div>-->
 </body> 
 </html>
