--- a/html-css/Atividade/2 atividade/html/index.html
+++ b/html-css/Atividade/2 atividade/html/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/tittle.css">
     <link rel="stylesheet" href="../css/animacao.css">
+    <link rel="stylesheet" href="../css/animation.css">
     <title>vamo la</title>
 </head>
 <body>
@@ -20,26 +21,45 @@
 
                 </div>
                 <ul class="menu">
-                    <li><a href="">Aaaaaaaaaaaaa</a></li>
-                    <li><a href="">Bbbbbbbbbbbbb</a></li>
-                    <li><a href="">Ccccccccccccc</a></li>
-                    <li><a href="" id="botao">Ddddddddddddd</a></li>
+                    <li class="men1">
+                        <a href="">Funções uteis</a>
+                        <div class="menuz">
+                            <a href="video.html">Videos</a>
+                            <a href="imagem.html">Imagens</a>
+                            <a href="audio.html">Audios</a>
+                        </div>
+                    </li>
+                    <li><a href="tags.html">Tags</a></li>
+                    <li><a href="tags semânticas.html">Tags  Semânticas</a></li> 
+                    <li ><a href="cadastra.html" id="botao">Cadastrar-se</a></li>
+ 
                 </ul>
             </nav> 
         </header>
     </div>
-    <div class="box">
+    <div class="box12">
         <article>
-            <section>
-                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo, itaque eveniet. Asperiores pariatur quis magnam nemo animi facere exercitationem dolorum, corrupti voluptatibus hic. Reprehenderit velit eius ut iste omnis fugiat.<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, dicta! Ullam nobis in ratione commodi soluta magni aut quisquam. Magnam esse voluptatum animi, amet distinctio illo dolor consequuntur nulla velit.</p<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, dicta! Ullam nobis in ratione commodi soluta magni aut quisquam. Magnam esse voluptatum animi, amet distinctio illo dolor consequuntur nulla velit.</p<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, dicta! Ullam nobis in ratione commodi soluta magni aut quisquam. Magnam esse voluptatum animi, amet distinctio illo dolor consequuntur nulla velit.</p<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, dicta! Ullam nobis in ratione commodi soluta magni aut quisquam. Magnam esse voluptatum animi, amet distinctio illo dolor consequuntur nulla velit.</p<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, dicta! Ullam nobis in ratione commodi soluta magni aut quisquam. Magnam esse voluptatum animi, amet distinctio illo dolor consequuntur nulla velit.</p<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, dicta! Ullam nobis in ratione commodi soluta magni aut quisquam. Magnam esse voluptatum animi, amet distinctio illo dolor consequuntur nulla velit.</p>
-            </section>
+            <section> 
+                <nav>
+                    <a href="">
+                        <div class="box2">
+                            <div id="animation"></div> 
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="box2">
+                            <div id="animation1"></div> 
+                        </div>
+                    </a> 
+                    <a href="" class="a-G">ANIMAÇÕES</a> 
+                </nav>
+            </section>   
         </article>
-    </div>
-     
-    <!--<div class="box1">
+    </div> 
+    <div class="box1">
         <aside>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis dolores sit voluptate hic facilis in ad suscipit eaque possimus, ut corrupti blanditiis, adipisci numquam amet rem ab iusto! Eligendi, enim?</p>
+            <p>Aqui tem auxilios para caso precise utilizar </p>
         </aside>
-    </div>-->
+    </div>
 </body> 
 </html>
