--- a/html-css/projeto/html/frutosdomar.html
+++ b/html-css/projeto/html/frutosdomar.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/tittle.css"> 
     <link rel="stylesheet" href="../css/footer.css">
-    <title>Almoço</title>
+    <title>Frutos do mar</title>
 </head>
 <body>
     <div class="header">
