--- a/html-css/projeto/html/frutosdomar/bobo.html
+++ b/html-css/projeto/html/frutosdomar/bobo.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../../css/reset.css">
     <link rel="stylesheet" href="../../css/tittle.css"> 
     <link rel="stylesheet" href="../../css/footer.css">
-    <title>Document</title>
+    <title>Bobo</title>
 </head>
 <body>
     <div class="header">
@@ -39,7 +39,7 @@
         <a href="../frutosdomar.html" id="botao" class="a-detalhe">Voltar</a>
   
   
-    
+  
         <article class="box22">
                 <div class="box20">
                 <h1 class="fs-50">Ingredientes: </h1>
