--- a/html-css/projeto/html/index.html
+++ b/html-css/projeto/html/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/tittle.css">
-    <title>vamo la</title>
+    <title>Receitas</title>
 </head>
 <body>
     <div class="header">
@@ -20,7 +20,7 @@
                     <li><a href="https://www.cpt.com.br/dicas-cursos-cpt/50-dicas-e-segredos-da-cozinha"   target="_blank" class="a-detalhe">Dicas para cozinhar</a></li> 
                     <li class="men1">
                         <a href="" class="a-detalhe">Blog de Culinaria</a>
-                        <div class="menuz">
+                        <div class="menuz">1
                             <a href="https://blog.ceraflame.com.br/historias-e-curiosidades-sobre-gastronomia/" target="_blank" class="a-detalhe">Curiosidades</a> 
                             <a href="https://portal.unit.br/blog/noticias/culinaria-high-tech-explorando-a-revoluco-tecnologica-na-area-gastronomica/" target="_blank" class="a-detalhe">Tecnologias</a>
                         </div>
