--- a/javascript/Dom/atividade/atividade 1/cadastra.html
+++ b/javascript/Dom/atividade/atividade 1/cadastra.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h2>Cadastro de Usuários</h2>
-        <form id="userForm">
+        <form id="formulario">
             <label for="name">Nome:</label>
             <input type="text" id="name" name="name" required>
             <label for="email">Email:</label>
@@ -21,7 +21,7 @@
             <input type="submit" value="Cadastrar">
         </form>
         <h2>Usuários Cadastrados</h2>
-        <ul id="mostrar" class="user-list"></ul>
+        <ul id="lista" class="user-list"></ul>
     </div>
 
     <script src="script.js"></script>
