--- a/javascript/Dom/atividade/atividade 1/cadastra.html
+++ b/javascript/Dom/atividade/atividade 1/cadastra.html
@@ -15,15 +15,14 @@
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required> 
             <label for="idade">Idade:</label> 
-            <input type="idade" id="idade" name="idade" required> 
+            <input type="number" id="idade" name="idade" required> 
             <label for="estado">Estado:</label> 
             <input type="estado" id="estado" name="estado" required> 
             <input type="submit" value="Cadastrar">
         </form>
         <h2>Usuários Cadastrados</h2>
         <ul id="lista" class="user-list"></ul>
-    </div>
-
+    </div> 
     <script src="script.js"></script>
 </body>
 </html>
